docs: 更新项目文档并新增演示脚本，完善执行层功能
1.  更新根目录与executor模块的README文档，补充快速开始、启动方式、SQL支持说明
2.  新增Windows一键启动脚本run-cli.bat与答辩演示脚本
3.  为SqlEngine新增多语句拆分与注释剥离工具方法
4.  重构SwingDemo，支持多行多语句执行、自动管理存储连接并优化交互逻辑
5.  补充模块负责人信息与项目结构说明